force-app/main/default/objects/smagicinteract__Feature_Request_Object__c/smagicinteract__Feature_Request_Object__c.object-meta.xml
<CustomObject>
    <description>This object is to store all the request for feature initiated by user</description>
    <label>Feature Request</label>
    <nameField>
        <label>Feature Request Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>