force-app/main/default/objects/smagicinteract__Feature_Request_Object__c/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>