force-app/main/default/objects/smagicinteract__Feature_Request_Object__c/fields/smagicinteract__Feature__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Feature__c</fullName>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>