force-app/main/default/objects/smagicinteract__Feature_Request_Object__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Request_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>