force-app/main/default/objects/smagicinteract__Feature_Request_Object__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Feature__c</columns>
    <columns>smagicinteract__User__c</columns>
    <columns>smagicinteract__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>